test/compile-fail/fuzz_function_pointer_line_error.c
int 0()int(__LINE__""
